--- a/public/index.html
+++ b/public/index.html
@@ -3,21 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <title>GugaCoin</title>
-  <style>
-    /* Простейшие стили для уведомлений */
-    .notification {
-      opacity: 1;
-      transition: opacity 0.5s ease;
-      margin-bottom: 10px;
-      padding: 10px;
-      border-radius: 4px;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.2);
-      color: #fff;
-    }
-  </style>
+  <!-- Подключение шрифтов (если необходимо) -->
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;600&display=swap" rel="stylesheet">
+  <!-- Подключение CSS-файла -->
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <!-- Здесь будут динамически создаваться UI-элементы -->
+  <!-- Ваш HTML-контент -->
   <div id="authModal" class="modal hidden"></div>
   <div id="topBar" class="hidden"></div>
   <div id="bottomBar" class="hidden"></div>
