--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
   <link rel="icon" href="photo/15.png" type="image/jpeg">
   <link rel="stylesheet" href="styles.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet">
+
+  <!-- JS-библиотеки -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/jsqr/dist/jsQR.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1"></script>
@@ -16,17 +18,23 @@
   <script src="https://cdn.jsdelivr.net/npm/tweetnacl/nacl.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/tweetnacl-util/nacl-util.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.5/dist/umd/supabase.min.js"></script>
+
+  <!-- Основной скрипт (запускается после загрузки DOM) -->
+  <script src="script.js" defer></script>
 </head>
+
+<body>
   <div id="balanceDisplay" style="display:none;">
     <div id="balanceValue">0.00000 ₲</div>
-    <div id="userIdDisplay"></div> <!-- ID появится здесь -->
-</div>
+    <div id="userIdDisplay"></div>
+  </div>
+
   <div id="mineContainer" class="hidden">
     <img id="mineBtn" src="photo/15.png" alt="Майнить">
   </div>
+
   <div id="loadingIndicator" class="loading-indicator hidden">
-  <img src="photo/25.gif" alt="Загрузка..." />
- </div>
-  <script src="script.js"></script>
+    <img src="photo/25.gif" alt="Загрузка..." />
+  </div>
 </body>
 </html>
