--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <script src="https://cdn.jsdelivr.net/npm/tweetnacl-util/nacl-util.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.5/dist/umd/supabase.min.js"></script>
 
-  <!-- Основной скрипт (запускается после загрузки DOM) -->
+  <!-- Основной скрипт (запускается после загрузки DOM и библиотек) -->
   <script src="script.js" defer></script>
 </head>
 
