--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <script src="https://cdn.jsdelivr.net/npm/jsqr/dist/jsQR.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1"></script>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
-  <script src="https://unpkg.com/tweetnacl@1.0.3/nacl.min.js"></script>
-  <script src="https://unpkg.com/tweetnacl-util@0.15.1/nacl-util.min.js"></script>
+  <script src="nacl.min.js"></script>
+  <script src="nacl-util.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.5/dist/umd/supabase.min.js"></script>
 
   <!-- Основной скрипт (запускается после загрузки DOM и библиотек) -->
