--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>GugaPay</title>
+  <title>GugaPayy</title>
   <link rel="icon" href="photo/15.png" type="image/jpeg">
   <link rel="stylesheet" href="styles.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,17 +18,14 @@
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.5/dist/umd/supabase.min.js"></script>
   <script src="script.js" defer></script>
 </head>
-
 <body>
   <div id="balanceDisplay" style="display:none;">
     <div id="balanceValue">0.00000 ₲</div>
     <div id="userIdDisplay"></div>
   </div>
-
   <div id="mineContainer" class="hidden">
     <img id="mineBtn" src="photo/15.png" alt="Майнить">
   </div>
-
   <div id="loadingIndicator" class="loading-indicator hidden">
     <img src="photo/25.gif" alt="Загрузка..." />
   </div>
